package ex46;

public class ExerciseConstants {
    public static final String INPUT_FILENAME = "exercise46_input.txt";
}
